<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evento</string>
    <string name="create_button"> Create an Event </string>
    <string name="action_settings">Settings</string>
    <string name="whats_happen">What\'s Happening?</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="eventName">Enter event name</string>
    <string name="eventLocation">Enter event location</string>
    <string name="dateTextview">date</string>
    <string name="dateBtn">Set Date</string>
    <string name="startTimeTextview">start time</string>
    <string name="startTimeBtn">Set Start Time</string>
    <string name="endTimeTextview">end time</string>
    <string name="endTimeBtn">Set End time</string>
    <string name="eventDescriptTextView">Event Description</string>
    <string name="eventDescriptHint">Enter event description</string>
    <string name="createBtn">Create</string>
    <string name="title_activity_create_event_from_img">CreateEvent_fromImg</string>
    <string name="take_picture_btn">Take a Picture</string>
    <string name="select_picture_btn">Select from Gallery</string>
    <string name="title_activity_browse_events">BrowseEvents</string>
    <string name="text_from_img">Your text will appear here</string>
    <string name="confirm">Confirm</string>

</resources>
