<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.summer.evento.CreateEvent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventName"
        android:hint="@string/eventName"
        android:maxLines="1" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventLocation"
        android:hint="@string/eventLocation"
        android:maxLines="1"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTextview"
            android:id="@+id/date"
            android:layout_weight="1" />

        <Button
            android:id="@+id/datePicker"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateBtn"
        	android:background="#ffcb05" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTimeTextview"
            android:id="@+id/startTime"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/startTimePicker"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startTimeBtn"
        	android:background="#ffcb05" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endTimeTextview"
            android:id="@+id/endTime"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/endTimePicker"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endTimeBtn"
        	android:background="#ffcb05" />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventDescriptHint"
        android:id="@+id/eventDescription"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createBtn"
        android:id="@+id/createButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#ffcb05" />

</LinearLayout>
